// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`test ElementPanel in mobile should render MainType correctly 1`] = `
<body
  class="adm-overflow-hidden"
>
  <div
    class="adm-px-tester"
    style="--size: 10;"
  />
  <div
    class="adm-px-tester"
  />
  <div>
    <div
      class="adm-floating-panel adm-floating-panel-bottom panel panel"
      data-animating="true"
      style="height: 0px; transform: translateY(calc(100% + (0px)));"
    >
      <div
        class="adm-floating-panel-mask"
        style="display: none;"
      />
      <div
        class="adm-floating-panel-header"
      >
        <div
          class="adm-floating-panel-bar"
        />
      </div>
      <div
        class="adm-floating-panel-content"
      >
        <span
          class="anticon close-icon"
          role="img"
          tabindex="-1"
        >
          <svgr-url
            aria-hidden="true"
            class=""
            fill="currentColor"
            focusable="false"
            height="1em"
            width="1em"
          />
        </span>
        <div
          class="title"
        >
          Elements
        </div>
        <div
          class="header hide-search"
        >
          <back-button />
          <search-bar />
          <main-type-selector />
        </div>
        <div
          class="scroll-content"
        >
          <main-content />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`test ElementPanel in mobile should render Search correctly 1`] = `
<body
  class="adm-overflow-hidden"
>
  <div
    class="adm-px-tester"
    style="--size: 10;"
  />
  <div
    class="adm-px-tester"
  />
  <div>
    <div
      class="adm-floating-panel adm-floating-panel-bottom panel panel"
      data-animating="true"
      style="height: 0px; transform: translateY(calc(100% + (0px)));"
    >
      <div
        class="adm-floating-panel-mask"
        style="display: none;"
      />
      <div
        class="adm-floating-panel-header"
      >
        <div
          class="adm-floating-panel-bar"
        />
      </div>
      <div
        class="adm-floating-panel-content"
      >
        <span
          class="anticon close-icon"
          role="img"
          tabindex="-1"
        >
          <svgr-url
            aria-hidden="true"
            class=""
            fill="currentColor"
            focusable="false"
            height="1em"
            width="1em"
          />
        </span>
        <div
          class="title"
        >
          Elements
        </div>
        <div
          class="header hide-select"
        >
          <back-button />
          <search-bar />
          <main-type-selector />
        </div>
        <div
          class="scroll-content"
        >
          <main-content />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`test ElementPanel in mobile should render SubType correctly 1`] = `
<body
  class="adm-overflow-hidden"
>
  <div
    class="adm-px-tester"
    style="--size: 10;"
  />
  <div
    class="adm-px-tester"
  />
  <div>
    <div
      class="adm-floating-panel adm-floating-panel-bottom panel panel"
      data-animating="true"
      style="height: 0px; transform: translateY(calc(100% + (0px)));"
    >
      <div
        class="adm-floating-panel-mask"
        style="display: none;"
      />
      <div
        class="adm-floating-panel-header"
      >
        <div
          class="adm-floating-panel-bar"
        />
      </div>
      <div
        class="adm-floating-panel-content"
      >
        <span
          class="anticon close-icon"
          role="img"
          tabindex="-1"
        >
          <svgr-url
            aria-hidden="true"
            class=""
            fill="currentColor"
            focusable="false"
            height="1em"
            width="1em"
          />
        </span>
        <div
          class="title"
        >
          Elements
        </div>
        <div
          class="header hide-search hide-select"
        >
          <back-button />
          <search-bar />
          <main-type-selector />
        </div>
        <div
          class="scroll-content"
        >
          <main-content />
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`test ElementPanel should render MainType correctly 1`] = `
<body>
  <div
    class="adm-px-tester"
    style="--size: 10;"
  />
  <div
    class="adm-px-tester"
  />
  <div />
</body>
`;

exports[`test ElementPanel should render Search correctly 1`] = `
<body>
  <div
    class="adm-px-tester"
    style="--size: 10;"
  />
  <div
    class="adm-px-tester"
  />
  <div />
</body>
`;
